New: dist2cobyla metric (not working)

--- a/phLigands/Extremizer.ipynb
+++ b/phLigands/Extremizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42,19 +42,19 @@
     "    pass\n",
     "\n",
     "\n",
-    "class FakeGrad(Extremizer):\n",
-    "    def diff(self, func, x, deltadiff):\n",
-    "        return (func(x-deltadiff/2) - func(x+deltadiff/2))/deltadiff\n",
+    "# class FakeGrad(Extremizer):\n",
+    "#     def diff(self, func, x, deltadiff):\n",
+    "#         return (func(x-deltadiff/2) - func(x+deltadiff/2))/deltadiff\n",
     "    \n",
-    "    def extremum(self, metric, model, start, field, dataX, dataY, alpha=0.01, delta=0.1, deltadiff=0.001):\n",
-    "        x_prev = start\n",
-    "        x = x_prev.copy()\n",
-    "        while(True):\n",
-    "            for param in start.keys():\n",
-    "                x[key] = x[key] - alpha * diff(metric.score(model, dataX, dataY))\n",
-    "            if np.abs(x_prev - x) < delta:\n",
-    "                return x\n",
-    "            x_prev = x"
+    "#     def extremum(self, metric, model, start, field, dataX, dataY, alpha=0.01, delta=0.1, deltadiff=0.001):\n",
+    "#         x_prev = start\n",
+    "#         x = x_prev.copy()\n",
+    "#         while(True):\n",
+    "#             for param in start.keys():\n",
+    "#                 x[key] = x[key] - alpha * diff(metric.score(model, dataX, dataY))\n",
+    "#             if np.abs(x_prev - x) < delta:\n",
+    "#                 return x\n",
+    "#             x_prev = x"
    ]
   }
  ],
