--- a/phLigands/Metric.ipynb
+++ b/phLigands/Metric.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,8 @@
    "source": [
     "%%writefile Metric.py\n",
     "import numpy as np\n",
+    "from scipy.optimize import fmin_cobyla\n",
+    "\n",
     "\n",
     "class Metric:\n",
     "    extremum = min\n",
@@ -99,6 +101,37 @@
     "        if return_array:\n",
     "            return dists, aim_points\n",
     "        return sum(dists)\n",
+    "\n",
+    "class Dist2cobyla(Dist2):\n",
+    "    def aim_point(self, model, params, dataX, dataY, delta=0.001, return_dist=False, **kwargs):\n",
+    "        dist2 = list()\n",
+    "        aim_points = list()\n",
+    "        for index, row in np.ndenumerate(dataX):\n",
+    "            p = (dataX[index], dataY[index])\n",
+    "            funct = lambda x: model.eval(params, x)\n",
+    "            obj = lambda X: self.evaldist2(model, params, p[0], X[0], p[1], X[1])\n",
+    "            def c1(X):\n",
+    "                x,y = X\n",
+    "                return funct(x) - y\n",
+    "            p0 = (dataX[index], funct(dataX[index]))\n",
+    "            X = fmin_cobyla(obj, x0=p0, cons=[c1])\n",
+    "#             print(X)\n",
+    "            aim_points.append(X[0])\n",
+    "            if return_dist: dist2.append(obj(X))\n",
+    "        print(aim_points)\n",
+    "        if return_dist: \n",
+    "            return dist2, aim_points\n",
+    "        return aim_points\n",
+    "    \n",
+    "    \n",
+    "    def evaldist2(self, model, params, dataX, dataX_true, dataY, dataY_true, weightsX=None, weightsY=None):\n",
+    "        if weightsX and weightsY:\n",
+    "            return self.dist2(dataX, dataX_true) * weightsX + self.dist2(dataY, dataY_true) * weightsY\n",
+    "        if weightsX:\n",
+    "            return self.dist2(dataX, dataX_true) * weightsX + self.dist2(dataY, dataY_true)\n",
+    "        if weightsY:\n",
+    "            return self.dist2(dataX, dataX_true) + self.dist2(dataY, dataY_true) * weightsY\n",
+    "        return self.dist2(dataX, dataX_true) + self.dist2(dataY, dataY_true)\n",
     "    \n",
     "    \n",
     "class Diff2(Dist2):\n",
