--- a/phLigands/Model.ipynb
+++ b/phLigands/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,8 +16,11 @@
    "source": [
     "%%writefile Model.py\n",
     "import numpy as np\n",
+    "from scipy.optimize import root_scalar\n",
+    "\n",
     "\n",
     "class Model:\n",
+    "    consts = None\n",
     "    params = None\n",
     "    defparams = None\n",
     "    \n",
@@ -57,13 +60,13 @@
     "    def _eval_function(self, function, params, dataX, **kwargs):\n",
     "        ### Fix this isinstance\n",
     "        if isinstance(dataX, np.float):\n",
-    "            return function(dataX, **params)\n",
+    "            return function(dataX, **self.consts, **params)\n",
     "        dataX = np.asarray(dataX)\n",
     "        dataY = np.empty(dataX.shape[0])\n",
     "        dataY[:] = np.nan\n",
     "        for i, pointX in np.ndenumerate(dataX):\n",
-    "            a = function(pointX, **params)\n",
-    "            print(a)\n",
+    "            a = function(pointX, **self.consts, **params)\n",
+    "#             print(a)\n",
     "            dataY[i] = a\n",
     "        return dataY   \n",
     "    \n",
@@ -79,6 +82,8 @@
     "\n",
     "\n",
     "class ScatchardN(Model):\n",
+    "    consts = {}\n",
+    "    \n",
     "    def setDefParams(self):\n",
     "        defparams = dict()\n",
     "        defparams[\"A_b\"] = {\"min\" : 150, \"def\" : 191.8, \"max\" : 210}\n",
@@ -96,7 +101,28 @@
     "        if A_b == 0 or n == 0 or k == 0:\n",
     "            return np.nan\n",
     "        tmp = 1 / (k * A_b) + n + x\n",
-    "        return A_b * (1 - (2 * tmp - 4 * n) / (2 * np.sqrt(tmp**2 - 4 * n * x)))/ (2 * n)"
+    "        return A_b * (1 - (2 * tmp - 4 * n) / (2 * np.sqrt(tmp**2 - 4 * n * x)))/ (2 * n)\n",
+    "    \n",
+    "    \n",
+    "class MGvH(Model):\n",
+    "    consts = {\"c\": 41, \"Af\": 0}\n",
+    "    \n",
+    "    def setDefParams(self):\n",
+    "        defparams = dict()\n",
+    "        defparams[\"Ab\"] = {\"min\" : 170, \"def\" : 191.8, \"max\" : 210}\n",
+    "        defparams[\"k\"] = {\"min\" : 0.001, \"def\" : 0.02, \"max\" : 1}\n",
+    "        defparams[\"n\"] = {\"min\" : 0.001, \"def\" : 3.6, \"max\" : 7}\n",
+    "        return defparams\n",
+    "    \n",
+    "    def function(self, PD, c, Af, Ab, k, n):\n",
+    "        N = c * PD\n",
+    "        mgvh = lambda cb: cb - k * (c - cb) * (N - n * cb) * ((N - n * cb)/(N - (n-1) * cb))**(n-1)\n",
+    "        cb = root_scalar(mgvh, bracket=(0, min([c, N/n])), method='brentq').root\n",
+    "        return (c - cb)/c * Af + cb/c * Ab\n",
+    "    \n",
+    "    def derivative(self, PD, c, Af, Ab, k, n):\n",
+    "        step = 0.001\n",
+    "        return (self.function(PD + step/2, c, Af, Ab, k, n) - self.function(PD - step / 2, c, Af, Ab, k, n)) / step"
    ]
   },
   {
@@ -104,7 +130,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
