Gradient (not working) Logging

--- a/phLigands/Estimator.ipynb
+++ b/phLigands/Estimator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,28 +26,17 @@
     "    metric = None\n",
     "    extremizer = None\n",
     "    \n",
-    "    def __init__(self, extremizer=None, metric=None, model=None, defparams=None):\n",
-    "        if extremizer: self.setExtremizer(extremizer)\n",
-    "        if metric: self.setMetric(metric)\n",
-    "        if model: self.setModel(model)\n",
-    "    \n",
-    "    def setExtremizer(self, extremizer):\n",
+    "    def __init__(self, extremizer=None, metric=None, model=None):\n",
     "        self.extremizer = extremizer\n",
-    "    \n",
-    "    def setMetric(self, metric):\n",
     "        self.metric = metric\n",
-    "    \n",
-    "    def setModel(self, model):\n",
     "        self.model = model\n",
     "    \n",
     "    def fit(self, dataX, dataY):\n",
     "        self.dataX = dataX\n",
     "        self.dataY = dataY\n",
     "        \n",
-    "    def bestParams(self):            \n",
-    "        start = self.model.getDefParams()\n",
-    "        field = self.model.getDefField()\n",
-    "        self.params = self.extremizer.extremum(self.metric, self.model, start, field, self.dataX, self.dataY)\n",
+    "    def bestParams(self, def_params, var_params):\n",
+    "        self.params = self.extremizer.extremum(self.metric, self.model, self.dataX, self.dataY, def_params, var_params)\n",
     "        return self.params\n",
     "    \n",
     "    def score(self, params=None, is_array=False):\n",
@@ -56,7 +45,7 @@
     "        return self.metric.score(self.model, params, self.dataX, self.dataY, is_array)\n",
     "\n",
     "    def desmos(self):\n",
-    "        print(f\"A(x, {self.params['A_b']}, {self.params['n']}, {self.params['k']})\")\n",
+    "        print(f\"A(x, {self.params['Ab']}, {self.params['n']}, {self.params['k']})\")\n",
     "    \n",
     "    def plotAB(self, A, B, rangeA=None, rangeB=None, dlt=0.5, log=None, **kwargs):\n",
     "        linA, linB = self.model.getField(A, rangeA, dlt=dlt), self.model.getField(B, rangeB, dlt=dlt)\n",
