--- a/phLigands/Extremizer.ipynb
+++ b/phLigands/Extremizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -15,10 +15,19 @@
    ],
    "source": [
     "%%writefile Extremizer.py\n",
+    "import logging\n",
+    "\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "class Extremizer():\n",
-    "    def extremum(self, metric, model, start, field, dataX, dataY):\n",
+    "    iter_field = 40\n",
+    "    logger = logging.getLogger(\"Extremizer\")\n",
+    "    \n",
+    "    def __init__(self, iter_field=40):\n",
+    "        self.iter_field = iter_field\n",
+    "        \n",
+    "    def extremum(self, metric, model, dataX, dataY, def_params, var_params):\n",
     "        prev_params = start\n",
     "        while(True):\n",
     "            iter_params = prev_params.copy()\n",
@@ -28,12 +37,10 @@
     "                for i, param_val in np.ndenumerate(field[param]):\n",
     "                    iter_params[param] = param_val\n",
     "                    errors[i] = metric.score(model, iter_params, dataX, dataY)\n",
-    "#                     print(iter_params, \"score: \", errors[i])\n",
-    "#                 print(np.isnan(errors[0]))\n",
+    "                    self.logger.debug(f\"ParamField: {iter_params} : {errors[i]}\")\n",
     "                best_val = metric.extremum(filter(lambda x: not np.isnan(x), errors) )\n",
-    "#                 print(\"B\",param, iter_params[param], \"score: \", errors)\n",
     "                iter_params[param] = field[param][np.where(errors == best_val)[0]][0]\n",
-    "            print(\"AAAAAA\", iter_params)\n",
+    "            self.logger.info(f\"Iter: {iter_params}\")\n",
     "            if iter_params == prev_params:\n",
     "                return iter_params\n",
     "            prev_params = iter_params\n",
@@ -41,20 +48,45 @@
     "class CoordEx(Extremizer):\n",
     "    pass\n",
     "\n",
-    "\n",
-    "# class FakeGrad(Extremizer):\n",
-    "#     def diff(self, func, x, deltadiff):\n",
-    "#         return (func(x-deltadiff/2) - func(x+deltadiff/2))/deltadiff\n",
+    "class Gradient():\n",
+    "    alpha = None\n",
+    "    precision = None\n",
+    "    max_iterations = 1000\n",
+    "    logger = logging.getLogger(\"Extremizer\")\n",
     "    \n",
-    "#     def extremum(self, metric, model, start, field, dataX, dataY, alpha=0.01, delta=0.1, deltadiff=0.001):\n",
-    "#         x_prev = start\n",
-    "#         x = x_prev.copy()\n",
-    "#         while(True):\n",
-    "#             for param in start.keys():\n",
-    "#                 x[key] = x[key] - alpha * diff(metric.score(model, dataX, dataY))\n",
-    "#             if np.abs(x_prev - x) < delta:\n",
-    "#                 return x\n",
-    "#             x_prev = x"
+    "    def __init__(self, alpha=0.0005, precision=0.005):\n",
+    "        self.alpha = alpha\n",
+    "        self.precision = precision\n",
+    "        \n",
+    "    def _grad_dict(self, metric, model, dataX, dataY, def_params, var_params):\n",
+    "        step = 0.001\n",
+    "        grad = var_params.copy()\n",
+    "        for param in var_params:\n",
+    "            params_m = def_params.copy()\n",
+    "            params_m[param] -= step / 2\n",
+    "            params_p = def_params.copy()\n",
+    "            params_p[param] += step / 2\n",
+    "            \n",
+    "            par_diff = (metric.score(model, params_m, dataX, dataY) - metric.score(model, params_p, dataX, dataY)) / step\n",
+    "            grad[param] = par_diff\n",
+    "        return grad\n",
+    "        \n",
+    "    def extremum(self, metric, model, dataX, dataY, def_params, var_params):\n",
+    "        iteration = 0\n",
+    "        prev_params = def_params\n",
+    "        while True:\n",
+    "            dlt = 0\n",
+    "            params = prev_params.copy()\n",
+    "            grad = self._grad_dict(metric, model, dataX, dataY, def_params, var_params)\n",
+    "            for param in grad:\n",
+    "                params[param] -= self.alpha * grad[param]\n",
+    "                dlt += abs(params[param] - prev_params[param])\n",
+    "            self.logger.debug(f\"Iter: {params}\")\n",
+    "            if (dlt / len(var_params.keys())) < self.precision or iteration > self.max_iterations:\n",
+    "                return params\n",
+    "            prev_params = params\n",
+    "            iteration += 1\n",
+    "            "
    ]
   }
  ],
