--- a/phLigands/Metric.ipynb
+++ b/phLigands/Metric.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -15,12 +15,15 @@
    ],
    "source": [
     "%%writefile Metric.py\n",
+    "import logging\n",
+    "\n",
     "import numpy as np\n",
     "from scipy.optimize import fmin_cobyla\n",
     "\n",
     "\n",
     "class Metric:\n",
     "    extremum = min\n",
+    "    logger = logging.getLogger(\"Metric\")\n",
     "    \n",
     "    def dist2(self, data, data_true, **kwargs):\n",
     "        return (data - data_true)**2\n",
@@ -110,15 +113,15 @@
     "            p = (dataX[index], dataY[index])\n",
     "            funct = lambda x: model.eval(params, x)\n",
     "            obj = lambda X: self.evaldist2(model, params, p[0], X[0], p[1], X[1])\n",
+    "            greater_coeff = 1 if dataY[index] - funct(dataX[index]) > 0 else -1 \n",
     "            def c1(X):\n",
     "                x,y = X\n",
-    "                return funct(x) - y\n",
+    "                return greater_coeff * (y - funct(x))\n",
     "            p0 = (dataX[index], funct(dataX[index]))\n",
     "            X = fmin_cobyla(obj, x0=p0, cons=[c1])\n",
-    "#             print(X)\n",
     "            aim_points.append(X[0])\n",
     "            if return_dist: dist2.append(obj(X))\n",
-    "        print(aim_points)\n",
+    "        self.logger.debug(f\"Aim: {aim_points}\")\n",
     "        if return_dist: \n",
     "            return dist2, aim_points\n",
     "        return aim_points\n",
