--- a/phLigands/Model.ipynb
+++ b/phLigands/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,110 +19,60 @@
     "from scipy.optimize import root_scalar\n",
     "\n",
     "\n",
-    "class Model:\n",
-    "    consts = None\n",
-    "    params = None\n",
-    "    defparams = None\n",
-    "    \n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        self.defparams = self.setDefParams()\n",
-    "        self.params = self.getDefParams()\n",
-    "    \n",
-    "    def getField(self, param, range_param=None, dlt=0.01):\n",
-    "        minv = range_param[0] if range_param else self.defparams[param][\"min\"]\n",
-    "        maxv = range_param[1] if range_param else self.defparams[param][\"max\"]\n",
-    "        return np.arange(minv, maxv, dlt)\n",
-    "                      \n",
-    "    def getDefField(self, dlt=0.01):\n",
-    "        field = dict() \n",
-    "        for param in self.defparams.keys():\n",
-    "            field[param] = self.getField(param, dlt=dlt)\n",
-    "        return field\n",
-    "    \n",
-    "    def getDefParams(self):\n",
-    "        start = dict()\n",
-    "        for param in self.defparams.keys():\n",
-    "            start[param] = self.defparams[param][\"def\"]\n",
-    "        return start\n",
-    "            \n",
-    "    def setDefParams(self):\n",
-    "        defparams = dict()\n",
-    "        defparams[\"k\"] = {\"min\" : -10, \"def\" : 5, \"max\" : 10}\n",
-    "        defparams[\"b\"] = {\"min\" : -10, \"def\" : 0, \"max\" : 10}\n",
-    "        return defparams\n",
-    "    \n",
-    "    def function(self, x, k, b):\n",
+    "class Model:    \n",
+    "    def _function(self, x, k, b):\n",
     "        return x * k + b\n",
     "    \n",
-    "    def derivative(self, x, k, b):\n",
+    "    def _derivative(self, x, k, b):\n",
     "        return k\n",
     "        \n",
     "    def _eval_function(self, function, params, dataX, **kwargs):\n",
     "        ### Fix this isinstance\n",
     "        if isinstance(dataX, np.float):\n",
-    "            return function(dataX, **self.consts, **params)\n",
+    "            return function(dataX, **params)\n",
     "        dataX = np.asarray(dataX)\n",
     "        dataY = np.empty(dataX.shape[0])\n",
     "        dataY[:] = np.nan\n",
     "        for i, pointX in np.ndenumerate(dataX):\n",
-    "            a = function(pointX, **self.consts, **params)\n",
-    "#             print(a)\n",
+    "            a = function(pointX, **params)\n",
     "            dataY[i] = a\n",
     "        return dataY   \n",
     "    \n",
     "    def eval(self, params, dataX, **kwargs):\n",
-    "        return self._eval_function(self.function, params, dataX)\n",
+    "        return self._eval_function(self._function, params, dataX)\n",
     "    \n",
     "    def diff(self, params, dataX, **kwargs):\n",
-    "        return self._eval_function(self.derivative, params, dataX)\n",
+    "        return self._eval_function(self._derivative, params, dataX)\n",
     "\n",
     "    \n",
     "class LinReg(Model):\n",
     "    pass\n",
     "\n",
     "\n",
-    "class ScatchardN(Model):\n",
-    "    consts = {}\n",
-    "    \n",
-    "    def setDefParams(self):\n",
-    "        defparams = dict()\n",
-    "        defparams[\"A_b\"] = {\"min\" : 150, \"def\" : 191.8, \"max\" : 210}\n",
-    "        defparams[\"k\"] = {\"min\" : 0.0001, \"def\" : 0.02, \"max\" : 1}\n",
-    "        defparams[\"n\"] = {\"min\" : 0.001, \"def\" : 3.6, \"max\" : 7}\n",
-    "        return defparams\n",
-    "    \n",
-    "    def function(self, x, A_b, n, k):\n",
-    "        if A_b == 0 or n == 0 or k == 0:\n",
+    "class ScatchardN(Model):    \n",
+    "    def _function(self, x, Ab, n, k):\n",
+    "        if Ab == 0 or n == 0 or k == 0:\n",
     "            return np.nan\n",
-    "        tmp = 1 / (k * A_b) + n + x\n",
-    "        return A_b * (tmp - np.sqrt(tmp**2 - 4 * n * x)) / (2 * n)\n",
+    "        tmp = 1 / (k * Ab) + n + x\n",
+    "        return Ab * (tmp - np.sqrt(tmp**2 - 4 * n * x)) / (2 * n)\n",
     "    \n",
-    "    def derivative(self, x, A_b, n, k):\n",
-    "        if A_b == 0 or n == 0 or k == 0:\n",
+    "    def _derivative(self, x, Ab, n, k):\n",
+    "        if Ab == 0 or n == 0 or k == 0:\n",
     "            return np.nan\n",
-    "        tmp = 1 / (k * A_b) + n + x\n",
-    "        return A_b * (1 - (2 * tmp - 4 * n) / (2 * np.sqrt(tmp**2 - 4 * n * x)))/ (2 * n)\n",
+    "        tmp = 1 / (k * Ab) + n + x\n",
+    "        return Ab * (1 - (2 * tmp - 4 * n) / (2 * np.sqrt(tmp**2 - 4 * n * x)))/ (2 * n)\n",
     "    \n",
     "    \n",
-    "class MGvH(Model):\n",
-    "    consts = {\"c\": 41, \"Af\": 0}\n",
-    "    \n",
-    "    def setDefParams(self):\n",
-    "        defparams = dict()\n",
-    "        defparams[\"Ab\"] = {\"min\" : 170, \"def\" : 191.8, \"max\" : 210}\n",
-    "        defparams[\"k\"] = {\"min\" : 0.001, \"def\" : 0.02, \"max\" : 1}\n",
-    "        defparams[\"n\"] = {\"min\" : 0.001, \"def\" : 3.6, \"max\" : 7}\n",
-    "        return defparams\n",
-    "    \n",
-    "    def function(self, PD, c, Af, Ab, k, n):\n",
+    "class MGvH(Model):    \n",
+    "    def _function(self, PD, c, Af, Ab, k, n):\n",
     "        N = c * PD\n",
     "        mgvh = lambda cb: cb - k * (c - cb) * (N - n * cb) * ((N - n * cb)/(N - (n-1) * cb))**(n-1)\n",
     "        cb = root_scalar(mgvh, bracket=(0, min([c, N/n])), method='brentq').root\n",
     "        return (c - cb)/c * Af + cb/c * Ab\n",
     "    \n",
-    "    def derivative(self, PD, c, Af, Ab, k, n):\n",
+    "    def _derivative(self, PD, c, Af, Ab, k, n):\n",
     "        step = 0.001\n",
-    "        return (self.function(PD + step/2, c, Af, Ab, k, n) - self.function(PD - step / 2, c, Af, Ab, k, n)) / step"
+    "        return (self._function(PD + step/2, c, Af, Ab, k, n) - self._function(PD - step / 2, c, Af, Ab, k, n)) / step"
    ]
   },
   {
