--- a/phLigands/Estimator.ipynb
+++ b/phLigands/Estimator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +20,7 @@
     "from matplotlib.colors import LogNorm\n",
     "\n",
     "class Estimator:\n",
+    "    params = None\n",
     "    dataX = None\n",
     "    dataY = None\n",
     "    model = None\n",
@@ -47,22 +48,35 @@
     "    def desmos(self):\n",
     "        print(f\"A(x, {self.params['Ab']}, {self.params['n']}, {self.params['k']})\")\n",
     "    \n",
-    "    def plotAB(self, A, B, rangeA=None, rangeB=None, dlt=0.5, log=None, **kwargs):\n",
-    "        linA, linB = self.model.getField(A, rangeA, dlt=dlt), self.model.getField(B, rangeB, dlt=dlt)\n",
-    "        meshA, meshB = np.meshgrid(linA, linB)\n",
+    "    def plotAB(self, var_params, params=None, iters=100, log=None, **kwargs):\n",
+    "        if not params: params = self.params\n",
+    "        if len(var_params.keys()) != 2:\n",
+    "            self.logger.warning(\"plotAB must have 2 variable parametrs\")\n",
+    "            return None\n",
+    "        A, B = var_params.keys()\n",
+    "        \n",
+    "        lin = [np.linspace(interval[0], interval[1], iters) for param, interval in var_params.items()]\n",
+    "        meshA, meshB = np.meshgrid(lin[0], lin[1])\n",
     "        res = np.array(meshA)\n",
     "        res[:] = np.nan\n",
     "        \n",
     "        for index, x in np.ndenumerate(res):\n",
-    "            params = self.params.copy()\n",
-    "            params[A], params[B] = meshA[index], meshB[index]\n",
-    "            res[index] = self.metric.score(self.model, params, self.dataX, self.dataY)\n",
+    "            params_field = params.copy()\n",
+    "            params_field[A], params_field[B] = meshA[index], meshB[index]\n",
+    "            res[index] = self.metric.score(self.model, params_field, self.dataX, self.dataY)\n",
     "        \n",
+    "        minA, minB = meshA[np.where(res == res.min())], meshB[np.where(res == res.min())]\n",
     "        lognorm = LogNorm() if log else None\n",
     "        plt.figure(figsize=(10,10))\n",
-    "        plt.imshow(res, extent=[linA[0], linA[-1], linB[-1], linB[0]], norm=lognorm, **kwargs)\n",
-    "        plt.scatter(meshA[np.where(res == res.min())], meshB[np.where(res == res.min())], color=\"red\")\n",
+    "        if not \"aspect\" in kwargs: kwargs[\"aspect\"] = (var_params[A][1] - var_params[A][0]) / (var_params[B][1] - var_params[B][0]) / 3\n",
+    "        plt.imshow(res, extent=[lin[0][0], lin[0][-1], lin[1][-1], lin[1][0]], norm=lognorm, **kwargs)\n",
+    "        plt.scatter(minA, minB, color=\"red\")\n",
     "        plt.show()\n",
+    "        \n",
+    "        params_field = params.copy()\n",
+    "        params_field[A], params_field[B] = minA, minB\n",
+    "        print(f\"Real minimum: {{\\\"{A}\\\": {round(minA[0], 3)}, \\\"{B}\\\": {round(minB[0], 3)}}}, Score: {round(self.metric.score(self.model, params_field, self.dataX, self.dataY), 2)}\")\n",
+    "        \n",
     "        return res\n",
     "    \n",
     "    def plot(self, params=None, iter=20):\n",
@@ -70,7 +84,6 @@
     "        plt.figure(figsize=(10,5))\n",
     "        plt.scatter(self.dataX, self.dataY)\n",
     "        xgr = np.linspace(self.dataX.min(), self.dataX.max(), iter)\n",
-    "        print(\"ASD\", params)\n",
     "        ygr = self.model.eval(params, xgr)\n",
     "        plt.plot(xgr, ygr)\n",
     "        plt.show()"
