--- a/phLigands/Extremizer.ipynb
+++ b/phLigands/Extremizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -54,12 +54,12 @@
     "    max_iterations = 1000\n",
     "    logger = logging.getLogger(\"Extremizer\")\n",
     "    \n",
-    "    def __init__(self, alpha=0.0005, precision=0.005):\n",
-    "        self.alpha = alpha\n",
+    "    def __init__(self, alpha=1, precision=0.005):\n",
+    "        self.alpha = alpha * 0.01\n",
     "        self.precision = precision\n",
     "        \n",
     "    def _grad_dict(self, metric, model, dataX, dataY, def_params, var_params):\n",
-    "        step = 0.001\n",
+    "        step = 0.00001\n",
     "        grad = var_params.copy()\n",
     "        for param in var_params:\n",
     "            params_m = def_params.copy()\n",
@@ -67,22 +67,29 @@
     "            params_p = def_params.copy()\n",
     "            params_p[param] += step / 2\n",
     "            \n",
-    "            par_diff = (metric.score(model, params_m, dataX, dataY) - metric.score(model, params_p, dataX, dataY)) / step\n",
+    "            par_diff = (metric.score(model, params_p, dataX, dataY) - metric.score(model, params_m, dataX, dataY)) / step\n",
     "            grad[param] = par_diff\n",
+    "        self.logger.debug(f\"Gradient: {grad}\")\n",
     "        return grad\n",
     "        \n",
     "    def extremum(self, metric, model, dataX, dataY, def_params, var_params):\n",
     "        iteration = 0\n",
     "        prev_params = def_params\n",
+    "        grad_zero = self._grad_dict(metric, model, dataX, dataY, def_params, var_params)\n",
     "        while True:\n",
-    "            dlt = 0\n",
+    "            dlt = list()\n",
+    "            ### debug\n",
+    "            steps = list()\n",
     "            params = prev_params.copy()\n",
-    "            grad = self._grad_dict(metric, model, dataX, dataY, def_params, var_params)\n",
+    "            grad = self._grad_dict(metric, model, dataX, dataY, params, var_params)\n",
     "            for param in grad:\n",
-    "                params[param] -= self.alpha * grad[param]\n",
-    "                dlt += abs(params[param] - prev_params[param])\n",
-    "            self.logger.debug(f\"Iter: {params}\")\n",
-    "            if (dlt / len(var_params.keys())) < self.precision or iteration > self.max_iterations:\n",
+    "                grad_step = self.alpha * grad[param] * (var_params[param][1] - var_params[param][0]) / abs(grad_zero[param])\n",
+    "                steps.append(grad_step)\n",
+    "                params[param] -= grad_step\n",
+    "                dlt.append(abs(params[param] - prev_params[param]))\n",
+    "            self.logger.debug(f\"Iter {iteration}: {params} Score: {metric.score(model, params, dataX, dataY)}\")\n",
+    "            self.logger.debug(f\"Step: {steps}\")\n",
+    "            if max(dlt) < self.precision or iteration > self.max_iterations:\n",
     "                return params\n",
     "            prev_params = params\n",
     "            iteration += 1\n",
