Gradient works with the ScatchardN, but not with the MGvH

--- a/phLigands/Estimator.ipynb
+++ b/phLigands/Estimator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +36,16 @@
     "        self.dataX = dataX\n",
     "        self.dataY = dataY\n",
     "        \n",
-    "    def bestParams(self, def_params, var_params):\n",
-    "        self.params = self.extremizer.extremum(self.metric, self.model, self.dataX, self.dataY, def_params, var_params)\n",
+    "    def bestParams(self, def_params, var_params, extremizer_plot=False):\n",
+    "        if extremizer_plot:\n",
+    "            extr_result = self.extremizer.extremum(self.metric, self.model, self.dataX, self.dataY, def_params, var_params, debug=True)\n",
+    "            self.params = extr_result[\"params\"]\n",
+    "            if len(var_params) == 2:\n",
+    "                self.plotAB(var_params, way=extr_result[\"params_arr\"], log=True)\n",
+    "            print(\"Iterations:\", extr_result[\"iterations\"])\n",
+    "#             print(extr_result)\n",
+    "        else:\n",
+    "            self.params = self.extremizer.extremum(self.metric, self.model, self.dataX, self.dataY, def_params, var_params)\n",
     "        return self.params\n",
     "    \n",
     "    def score(self, params=None, is_array=False):\n",
@@ -48,7 +56,7 @@
     "    def desmos(self):\n",
     "        print(f\"A(x, {self.params['Ab']}, {self.params['n']}, {self.params['k']})\")\n",
     "    \n",
-    "    def plotAB(self, var_params, params=None, iters=100, log=None, **kwargs):\n",
+    "    def plotAB(self, var_params, params=None, iters=100, log=None, way=None, **kwargs):\n",
     "        if not params: params = self.params\n",
     "        if len(var_params.keys()) != 2:\n",
     "            self.logger.warning(\"plotAB must have 2 variable parametrs\")\n",
@@ -68,14 +76,27 @@
     "        minA, minB = meshA[np.where(res == res.min())], meshB[np.where(res == res.min())]\n",
     "        lognorm = LogNorm() if log else None\n",
     "        plt.figure(figsize=(10,10))\n",
+    "#         ax = fig.add_subplot(1,1,1) \n",
+    "        plt.x = 0.08\n",
+    "        plt.ylim = 8\n",
     "        if not \"aspect\" in kwargs: kwargs[\"aspect\"] = (var_params[A][1] - var_params[A][0]) / (var_params[B][1] - var_params[B][0]) / 3\n",
     "        plt.imshow(res, extent=[lin[0][0], lin[0][-1], lin[1][-1], lin[1][0]], norm=lognorm, **kwargs)\n",
-    "        plt.scatter(minA, minB, color=\"red\")\n",
+    "        \n",
+    "        if way:\n",
+    "            pointsX = [point[A] for point in way]\n",
+    "            pointsY = [point[B] for point in way]\n",
+    "#             plt.scatter(pointsX, pointsY, color=\"red\")\n",
+    "            for i in range(1, len(pointsX)):\n",
+    "#                 if (var_params[A][0] < pointsX[i] < var_params[A][1] and var_params[B][0] < pointsY[i] < var_params[B][1]):\n",
+    "                    plt.plot([pointsX[i-1], pointsX[i]], [pointsY[i-1], pointsY[i]], 'ro-', markersize=3)\n",
+    "                \n",
+    "        \n",
+    "        plt.scatter(minA, minB, color=\"green\", s=96)\n",
     "        plt.show()\n",
     "        \n",
     "        params_field = params.copy()\n",
     "        params_field[A], params_field[B] = minA, minB\n",
-    "        print(f\"Real minimum: {{\\\"{A}\\\": {round(minA[0], 3)}, \\\"{B}\\\": {round(minB[0], 3)}}}, Score: {round(self.metric.score(self.model, params_field, self.dataX, self.dataY), 2)}\")\n",
+    "#         print(f\"Real minimum: {{\\\"{A}\\\": {round(minA[0], 3)}, \\\"{B}\\\": {round(minB[0], 3)}}}, Score: {round(self.metric.score(self.model, params_field, self.dataX, self.dataY), 2)}\")\n",
     "        \n",
     "        return res\n",
     "    \n",
@@ -88,6 +109,13 @@
     "        plt.plot(xgr, ygr)\n",
     "        plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
