--- a/phLigands/Extremizer.ipynb
+++ b/phLigands/Extremizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
     "    logger = logging.getLogger(\"Extremizer\")\n",
     "    \n",
     "    def __init__(self, alpha=1, precision=0.005):\n",
-    "        self.alpha = alpha * 0.01\n",
+    "        self.alpha = alpha * 0.02\n",
     "        self.precision = precision\n",
     "        \n",
     "    def _grad_dict(self, metric, model, dataX, dataY, def_params, var_params):\n",
@@ -69,30 +69,35 @@
     "            \n",
     "            par_diff = (metric.score(model, params_p, dataX, dataY) - metric.score(model, params_m, dataX, dataY)) / step\n",
     "            grad[param] = par_diff\n",
-    "        self.logger.debug(f\"Gradient: {grad}\")\n",
     "        return grad\n",
     "        \n",
-    "    def extremum(self, metric, model, dataX, dataY, def_params, var_params):\n",
+    "    def extremum(self, metric, model, dataX, dataY, def_params, var_params, debug=False):\n",
+    "        params_arr = list()\n",
     "        iteration = 0\n",
     "        prev_params = def_params\n",
     "        grad_zero = self._grad_dict(metric, model, dataX, dataY, def_params, var_params)\n",
     "        while True:\n",
     "            dlt = list()\n",
-    "            ### debug\n",
-    "            steps = list()\n",
     "            params = prev_params.copy()\n",
     "            grad = self._grad_dict(metric, model, dataX, dataY, params, var_params)\n",
     "            for param in grad:\n",
+    "                ## * (var_params[param][1] - var_params[param][0]) / abs(grad_zero[param])\n",
     "                grad_step = self.alpha * grad[param] * (var_params[param][1] - var_params[param][0]) / abs(grad_zero[param])\n",
-    "                steps.append(grad_step)\n",
     "                params[param] -= grad_step\n",
     "                dlt.append(abs(params[param] - prev_params[param]))\n",
-    "            self.logger.debug(f\"Iter {iteration}: {params} Score: {metric.score(model, params, dataX, dataY)}\")\n",
-    "            self.logger.debug(f\"Step: {steps}\")\n",
-    "            if max(dlt) < self.precision or iteration > self.max_iterations:\n",
-    "                return params\n",
     "            prev_params = params\n",
+    "            if debug: params_arr.append(params)\n",
     "            iteration += 1\n",
+    "            \n",
+    "            if max(dlt) < self.precision or iteration > self.max_iterations:\n",
+    "                if debug:\n",
+    "                    ret = dict()\n",
+    "                    ret[\"params\"] = params\n",
+    "                    ret[\"iterations\"] = iteration\n",
+    "                    ret[\"params_arr\"] = params_arr\n",
+    "                    return ret\n",
+    "                else:\n",
+    "                    return params\n",
     "            "
    ]
   }
