Temp version of solver of MGvH equation

--- a/phLigands/Model.ipynb
+++ b/phLigands/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,31 @@
     "        N = c * PD\n",
     "        mgvh = lambda cb: cb - k * (c - cb) * (N - n * cb) * ((N - n * cb)/(N - (n-1) * cb))**(n-1)\n",
     "        cb = root_scalar(mgvh, bracket=(0, min([c, N/n])), method='brentq').root\n",
+    "        return (c - cb)/c * Af + cb/c * Ab\n",
+    "    \n",
+    "    def _derivative(self, PD, c, Af, Ab, k, n):\n",
+    "        step = 0.001\n",
+    "        return (self._function(PD + step/2, c, Af, Ab, k, n) - self._function(PD - step / 2, c, Af, Ab, k, n)) / step\n",
+    "    \n",
+    "## I stole it\n",
+    "class MGvH1900(Model):    \n",
+    "    def _function(self, PD, c, Af, Ab, k, n):\n",
+    "        precision = 1e-4\n",
+    "        N = c * PD\n",
+    "        mgvh = lambda cb: k*(c-cb)*(N-cb*n)*((N-cb*n)/(N-cb*(n-1)))**(n-1)-cb;\n",
+    "        if (n<=0)or(k<=0): return 0\n",
+    "        if n<=1:\n",
+    "            return 0.5*(1/k+c+N/n-np.sqrt((1/k+c+N/n)**2-4*c*N/n))\n",
+    "        _n = 0;\n",
+    "        _r = min(c,N/n);\n",
+    "        cb = (_n + _r)/2;\n",
+    "        while (_r - _n > precision) and (abs(mgvh(cb)) > precision ):\n",
+    "            if(mgvh(cb) * mgvh(_n) <= 0):\n",
+    "                _r = cb\n",
+    "            else :\n",
+    "                _n = cb\n",
+    "            cb = (_n + _r) / 2;\n",
+    "        \n",
     "        return (c - cb)/c * Af + cb/c * Ab\n",
     "    \n",
     "    def _derivative(self, PD, c, Af, Ab, k, n):\n",
